--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ button {
   background-color: transparent;
   cursor: pointer;
 }
+#map {
+  width: 100%;
+  height: 90vh;
+}
 .info {
   text-align: center;
 }
@@ -39,6 +43,7 @@ button {
   position: absolute;
   bottom: 378px;
   left: 16px;
+  transform: scaleX(-1);
 }
 .target_image {
   margin: 5px 4px 10px 10px;
